# Cpp

./: CMakeLists.txt  SharedPtr.cpp  main.cpp
CommonExamples/: SharedPtr.h  SharedPtrTest.cpp  ThreadSafeQueue.cpp  ThreadSafeQueue.h
ModernCPP/: Chapter1.cpp  Chapter5.cpp  DeducingTypes.cpp  VariadicTemplatesFUNC.cpp  VariadicTemplatesTUPLE.cpp
TypeCasting/: C_Style_Cast.cpp  Const_Cast.cpp  Dynamic_Cast.cpp  Reinterpret_Cast.cpp  Static_Cast.cpp
templates_fun/: MetaOperations.cpp  VariadicTemplatesFUNC.cpp  factorial.cpp
